# wagtail-reacttaxonomy

./: .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  tests.py  urls.py  webpack.config.js
.devcontainer/: devcontainer.json
config/settings/: base.py  local.py
scripts/: pre-push.sh
test_page/: models.py  wagtail_hooks.py
test_page/management/commands/: load_test_data_fixtures.py
test_page/migrations/: 0001_initial.py  0002_taxtestpage.py  0002_testpage_permissions_json.py  0003_auto_20200811_1344.py  0004_testpage_permission_inherit_page.py  0005_auto_20200911_1548.py
wagtailreacttaxonomy/: __init__.py  edit_handlers.py  models.py  panels.py  wagtail_hooks.py
wagtailreacttaxonomy/migrations/: 0001_initial.py
wagtailreacttaxonomy/static/wagtailadmin/css/: wagtail-react-taxonomy.css
wagtailreacttaxonomy/static/wagtailadmin/js/: react-taxonomy-permission.esm.js  react-taxonomy.esm.js  wagtail-react-taxonomy.entry.js  wagtail-react-taxonomy.js
wagtailreacttaxonomy/templates/wagtailadmin/edit_handlers/: permissions_panel.html  taxonomy_panel.html
wagtailreacttaxonomy/templates/wagtailadmin/panels/: permissions_panel.html  taxonomy_panel.html
