[build-system]
requires = [
    "setuptools>=61.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "wagtail-reacttaxonomy"
version = "0.1"
authors = [
    { name = "Yohan Lebret", email = "yohan.lebret@gmail.com" },
]
description = "Add React Taxonomy component to a wagtail page and store it as a json in the db"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.license]
text = "MIT"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/nhsuk/wagtail-reacttaxonomy"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false